@@ -1,0 +1,348 @@
+/*                         G - E G G . C
+ * BRL-CAD
+ *
+ * Copyright (c) 2003-2009 United States Government as represented by
+ * the U.S. Army Research Laboratory.
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public License
+ * version 2.1 as published by the Free Software Foundation.
+ *
+ * This program is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this file; see the file named COPYING for more
+ * information.
+ *
+ */
+/** @file g-egg.c
+ *
+ * Program to convert a BRL-CAD model (in a .g file) to a panda3d egg file by
+ * calling on the NMG booleans.  Based on g-stl.c.
+ *
+ */
+
+#include "common.h"
+
+/* system headers */
+#include <stdlib.h>
+#include <sys/types.h>
+#include <sys/stat.h>
+#include <ctype.h>
+#include <math.h>
+#include <string.h>
+#include "bio.h"
+
+#include "gcv.h"
+
+/* interface headers */
+#include "vmath.h"
+#include "nmg.h"
+#include "rtgeom.h"
+#include "raytrace.h"
+
+static char usage[] = "Usage: %s [-bvi] [-xX lvl] [-a abs_tess_tol] [-r rel_tess_tol] [-n norm_tess_tol] [-D dist_calc_tol] [-o output_file_name.egg] brlcad_db.g object(s)\n";
+
+static int verbose;
+static int NMG_debug;			/* saved arg of -X, for longjmp handling */
+static int ncpu = 1;			/* Number of processors */
+static char *output_file = NULL;	/* output filename */
+static FILE *fp;			/* Output file pointer */
+static struct db_i *dbip;
+static struct model *the_model;
+static struct rt_tess_tol ttol;		/* tesselation tolerance in mm */
+static struct bn_tol tol;		/* calculation tolerance */
+static struct db_tree_state tree_state;	/* includes tol & model */
+
+static int regions_tried = 0;
+static int regions_converted = 0;
+static int regions_written = 0;
+static int inches = 0;
+static unsigned int tot_polygons = 0;
+
+
+static void
+nmg_to_egg(struct nmgregion *r, struct db_full_path *pathp, int region_id, int material_id, float color[3])
+{
+    struct model *m;
+    struct shell *s;
+    struct vertex *v;
+    char *region_name;
+    int region_polys=0;
+
+    NMG_CK_REGION(r);
+    RT_CK_FULL_PATH(pathp);
+
+    region_name = db_path_to_string(pathp);
+
+    m = r->m_p;
+    NMG_CK_MODEL(m);
+
+    /* Write pertinent info for this region */
+    fprintf(fp, "  <VertexPool> %s {\n", (region_name+1));
+
+    /* triangulate model */
+    nmg_triangulate_model(m, &tol);
+
+    /* Check triangles */
+    for (BU_LIST_FOR (s, shell, &r->s_hd))
+    {
+	struct faceuse *fu;
+
+	NMG_CK_SHELL(s);
+
+	for (BU_LIST_FOR (fu, faceuse, &s->fu_hd))
+	{
+	    struct loopuse *lu;
+	    vect_t facet_normal;
+
+	    NMG_CK_FACEUSE(fu);
+
+	    if (fu->orientation != OT_SAME)
+		continue;
+
+	    /* Grab the face normal and save it for all the vertex loops */
+	    NMG_GET_FU_NORMAL(facet_normal, fu);
+
+	    for (BU_LIST_FOR (lu, loopuse, &fu->lu_hd))
+	    {
+		struct edgeuse *eu;
+		int vert_count=0, vid = 0;
+		float flts[12];
+		float *flt_ptr;
+		unsigned char vert_buffer[50];
+
+		NMG_CK_LOOPUSE(lu);
+
+		if (BU_LIST_FIRST_MAGIC(&lu->down_hd) != NMG_EDGEUSE_MAGIC)
+		    continue;
+
+		memset(vert_buffer, 0, sizeof(vert_buffer));
+
+		/* check vertex numbers for each triangle */
+		for (BU_LIST_FOR (eu, edgeuse, &lu->down_hd))
+		{
+		    NMG_CK_EDGEUSE(eu);
+
+		    vert_count++;
+
+		    v = eu->vu_p->v_p;
+		    NMG_CK_VERTEX(v);
+		    fprintf(fp, "    <Vertex> %d {\n      %lf %lf %lf\n      <Normal> { %lf %lf %lf }\n    }\n", 
+			    vid++,
+			    V3ARGS(facet_normal),
+			    V3ARGS(v->vg_p->coord));
+		}
+		if (vert_count > 3)
+		{
+		    bu_free(region_name, "region name");
+		    bu_log("lu x%x has %d vertices!\n", lu, vert_count);
+		    bu_exit(1, "ERROR: LU is not a triangle");
+		}
+		else if (vert_count < 3)
+		    continue;
+
+		tot_polygons++;
+		region_polys++;
+	    }
+	}
+    }
+    fprintf(fp, "  }\n");
+
+    bu_free(region_name, "region name");
+}
+
+
+/*
+ *			M A I N
+ */
+int
+main(argc, argv)
+    int argc;
+    char *argv[];
+{
+    register int c;
+    double percent;
+    int i;
+
+    bu_setlinebuf(stderr);
+
+#if MEMORY_LEAK_CHECKING
+    rt_g.debug |= DEBUG_MEM_FULL;
+#endif
+    tree_state = rt_initial_tree_state;	/* struct copy */
+    tree_state.ts_tol = &tol;
+    tree_state.ts_ttol = &ttol;
+    tree_state.ts_m = &the_model;
+
+    /* Set up tesselation tolerance defaults */
+    ttol.magic = RT_TESS_TOL_MAGIC;
+    /* Defaults, updated by command line options. */
+    ttol.abs = 0.0;
+    ttol.rel = 0.01;
+    ttol.norm = 0.0;
+
+    /* Set up calculation tolerance defaults */
+    /* XXX These need to be improved */
+    tol.magic = BN_TOL_MAGIC;
+    tol.dist = 0.005;
+    tol.dist_sq = tol.dist * tol.dist;
+    tol.perp = 1e-5;
+    tol.para = 1 - tol.perp;
+
+    /* init resources we might need */
+    rt_init_resource(&rt_uniresource, 0, NULL);
+
+    /* make empty NMG model */
+    the_model = nmg_mm();
+    BU_LIST_INIT(&rt_g.rtg_vlfree);	/* for vlist macros */
+
+    /* Get command line arguments. */
+    while ((c = bu_getopt(argc, argv, "a:bm:n:o:r:vx:D:P:X:i")) != EOF) {
+	switch (c) {
+	    case 'a':		/* Absolute tolerance. */
+		ttol.abs = atof(bu_optarg);
+		ttol.rel = 0.0;
+		break;
+	    case 'n':		/* Surface normal tolerance. */
+		ttol.norm = atof(bu_optarg);
+		ttol.rel = 0.0;
+		break;
+	    case 'o':		/* Output file name. */
+		output_file = bu_optarg;
+		break;
+	    case 'r':		/* Relative tolerance. */
+		ttol.rel = atof(bu_optarg);
+		break;
+	    case 'v':
+		verbose++;
+		break;
+	    case 'P':
+		ncpu = atoi(bu_optarg);
+		rt_g.debug = 1;	/* XXX DEBUG_ALLRAYS -- to get core dumps */
+		break;
+	    case 'x':
+		sscanf(bu_optarg, "%x", (unsigned int *)&rt_g.debug);
+		break;
+	    case 'D':
+		tol.dist = atof(bu_optarg);
+		tol.dist_sq = tol.dist * tol.dist;
+		rt_pr_tol(&tol);
+		break;
+	    case 'X':
+		sscanf(bu_optarg, "%x", (unsigned int *)&rt_g.NMG_debug);
+		NMG_debug = rt_g.NMG_debug;
+		break;
+	    case 'i':
+		inches = 1;
+		break;
+	    default:
+		bu_exit(1, usage, argv[0]);
+		break;
+	}
+    }
+
+    if (bu_optind+1 >= argc) {
+	bu_exit(1, usage, argv[0]);
+    }
+
+    fp = stdout;
+    if (output_file) {
+	if ((fp=fopen(output_file, "wb+")) == NULL)
+	{
+	    perror(argv[0]);
+	    bu_exit(1, "Cannot open ASCII output file (%s) for writing\n", output_file);
+	}
+    }
+
+    /* Open brl-cad database */
+    argc -= bu_optind;
+    argv += bu_optind;
+    if ((dbip = db_open(argv[0], "r")) == DBI_NULL) {
+	perror(argv[0]);
+	bu_exit(1, "Unable to open geometry file (%s)\n", argv[0]);
+    }
+    if (db_dirbuild(dbip)) {
+	bu_exit(1, "ERROR: db_dirbuild failed\n");
+    }
+
+    BN_CK_TOL(tree_state.ts_tol);
+    RT_CK_TESS_TOL(tree_state.ts_ttol);
+
+    if (verbose) {
+	bu_log("Model: %s\n", argv[0]);
+	bu_log("Objects:");
+	for (i=1; i<argc; i++)
+	    bu_log(" %s", argv[i]);
+	bu_log("\nTesselation tolerances:\n\tabs = %g mm\n\trel = %g\n\tnorm = %g\n",
+	       tree_state.ts_ttol->abs, tree_state.ts_ttol->rel, tree_state.ts_ttol->norm);
+	bu_log("Calculational tolerances:\n\tdist = %g mm perp = %g\n",
+	       tree_state.ts_tol->dist, tree_state.ts_tol->perp);
+    }
+
+    /* print the egg header shtuff, including the command line to execute it */
+    fprintf(fp, "<CoordinateSystem> { Y-Up }\n\n");
+    fprintf(fp, "<Comment> {\n  \"%s", *argv);
+    for (i=1; i<argc; i++)
+	fprintf(fp, " %s", argv[i]);
+    fprintf(fp, "\n}\n");
+
+    /* Walk indicated tree(s).  Each region will be output separately */
+    while (--argc) {
+	fprintf(fp, "<Group> %s {\n", *(argv+1));
+	(void) db_walk_tree(dbip, 1, ++argv,
+			    1,			/* ncpu */
+			    &tree_state,
+			    0,			/* take all regions */
+			    gcv_region_end,
+			    nmg_booltree_leaf_tess,
+			    (genptr_t)nmg_to_egg);
+	fprintf(fp, "}\n");
+    }
+
+    percent = 0;
+    if (regions_tried>0) {
+	percent = ((double)regions_converted * 100) / regions_tried;
+	if (verbose)
+	    bu_log("Tried %d regions, %d converted to NMG's successfully.  %g%%\n",
+		   regions_tried, regions_converted, percent);
+    }
+    percent = 0;
+
+    if (regions_tried > 0) {
+	percent = ((double)regions_written * 100) / regions_tried;
+	if (verbose)
+	    bu_log("                  %d triangulated successfully. %g%%\n",
+		   regions_written, percent);
+    }
+
+    bu_log("%ld triangles written\n", tot_polygons);
+
+    if (output_file)
+	fclose(fp);
+
+    /* Release dynamic storage */
+    nmg_km(the_model);
+    rt_vlist_cleanup();
+    db_close(dbip);
+
+#if MEMORY_LEAK_CHECKING
+    bu_prmem("After complete G-EGG conversion");
+#endif
+
+    return 0;
+}
+
+
+/*
+ * Local Variables:
+ * mode: C
+ * tab-width: 8
+ * indent-tabs-mode: t
+ * c-file-style: "stroustrup"
+ * End:
+ * ex: shiftwidth=4 tabstop=8
+ */
